# libfernie

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  rnnoise_download_model.sh  tgcalls.cmake
src/: appsettings.cpp  appsettings.h  basemessagabledata.cpp  basemessagabledata.h  boolfiltermodel.h  callaudio.cpp  callaudio.h  callsmanager.cpp  callsmanager.h  chatdata.cpp  chatdata.h  chatfoldersmodel.cpp  chatfoldersmodel.h  chatlistmodel.cpp  chatlistmodel.h  chatpermissionfiltermodel.h  contactsmodel.cpp  contactsmodel.h  dbusadaptor.cpp  dbusadaptor.h  dbusinterface.h  debuglog.h  debuglogjs.h  ferniemain.cpp  ferniemain.h  folderchatlistmodel.cpp  folderchatlistmodel.h  invertedproxymodel.h  knownusersmodel.cpp  knownusersmodel.h  lottieitem.cpp  lottieitem.h  mceinterface.cpp  mceinterface.h  notificationmanager.cpp  notificationmanager.h  platformapp.h  processlauncher.h  settings.cpp  settings.h  (+11 more)
src/chat/: chatmanager.cpp  chatmanager.h  chatphotosmodel.cpp  chatphotosmodel.h  forumtopic.cpp  forumtopic.h  forumtopicmessagesmodel.cpp  forumtopicmessagesmodel.h  forumtopicsmodel.cpp  forumtopicsmodel.h  invertedmediamessagesmodel.cpp  invertedmediamessagesmodel.h  invertedmessagesmodel.cpp  invertedmessagesmodel.h  jumpablemessagesmodel.cpp  jumpablemessagesmodel.h  mediamessagesmodel.cpp  mediamessagesmodel.h  messagedata.cpp  messagedata.h  messagesmodel.cpp  messagesmodel.h  readablemessagesmodel.cpp  readablemessagesmodel.h
src/tdlib/: tdlibfile.cpp  tdlibfile.h  tdlibreceiver.cpp  tdlibreceiver.h  tdlibresponse.cpp  tdlibresponse.h  tdlibstate.cpp  tdlibstate.h  tdlibwrapper.cpp  tdlibwrapper.h
tdlib/include/td/telegram/: td_api.h  td_api.hpp
tg_owt/include/tg_owt/net/dcsctp/packet/: bounded_byte_writer.h
